--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
     <!-- Css -->
     <link rel="stylesheet" href="./public/css/styles.css">
+
+    <script src="./public/js/form.js"></script>
 </head>
 
 <body>
