Agrega validación al formulario

--- a/index.html
+++ b/index.html
@@ -678,11 +678,11 @@
             </section>
         </div>
 
-        <section id="reserva">
+        <section >
             <div class="subTitle_menu">
                 <h4>Contactanos</h4>
             </div>
-            <div class="contact_section">
+            <div class="contact_section" id="reserva">
                 <div class="form_container">
                     <div class="title_reserva">
                         <h4>Reservá</h4>
